<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infosplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bodyconten"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/splash"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titlesplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlesplash"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:fontFamily="@font/reef" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_fassycom"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleappsplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:fontFamily="@font/allerdisplay" />

        <TextView
            android:id="@+id/links1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/linkfassycom"
            android:textAlignment="center"
            android:textColor="@color/textgrid"
            app:fontFamily="@font/reef" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/arasaac" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Autor pictogramas: Sergio Palao Procedencia: ARASAAC (http://arasaac.org) Licencia: CC (BY-NC-SA) Propiedad: Gobierno de Aragon "
            android:textAlignment="center"
            android:textColor="@color/cian" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nada"
            android:textAlignment="center"
            android:textColor="@color/Negro" />

        <TextView
            android:id="@+id/forcilsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forcilsa"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            app:fontFamily="@font/reef" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/logo_cilsa"
            app:srcCompat="@drawable/logocilsa" />

        <TextView
            android:id="@+id/links2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linkcilsa"
            android:textAlignment="center"
            android:textColor="@color/textgrid"
            app:fontFamily="@font/reef" />

    </LinearLayout>

</LinearLayout>
