<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorelegirfoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bodyconten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/pickextra"
            android:gravity="left|center_vertical"
            android:onClick="imagesExtra"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ext2" />

            <TextView
                android:id="@+id/pickmas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pictogramas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:fontFamily="@font/reef" />

        </LinearLayout>

        <Button
            android:id="@+id/cancelelegir"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:background="@drawable/cancel9"
            android:text="@string/cancelar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:fontFamily="@font/reef"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@color/cian"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <TextView
                android:id="@+id/textoset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/imagen"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:fontFamily="@font/reef" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sacarfoto"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pickphoto"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/fsc_camera" />

            <TextView
                android:id="@+id/pickfoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sacar_foto"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:fontFamily="@font/reef" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/pickgalery"
            android:gravity="left|center_vertical"
            android:onClick="selectImage"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sacarfoto">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/fsc_img" />

            <TextView
                android:id="@+id/pickgalery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/elegir_foto"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:fontFamily="@font/reef"
                tools:targetApi="ice_cream_sandwich" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>